scrollbar color fixes

--- a/src/pages/CatalogPage/CatalogPage.module.scss
+++ b/src/pages/CatalogPage/CatalogPage.module.scss
@@ -57,7 +57,7 @@
       width: 100%;
       height: 40px;
       flex-shrink: 0;
-      background: $accent;
+      background: $bg-color-controllers;
       border: none;
       outline: none;
       font-family: inherit;
@@ -66,7 +66,7 @@
       font-weight: 700;
       line-height: 21px;
       box-sizing: border-box;
-      color: black;
+      color: $primary-text-color;
 
       &:hover {
         outline: 1px solid $bg-color-controllers-hov;
